--- a/paper/src/introduction.tex
+++ b/paper/src/introduction.tex
@@ -26,8 +26,8 @@ fast global shared storage is indispensable.
 
 However, In current cloud environment, the global shared storage can not meet the demand.
 For example, in Amazon public cloud system, there are a famous shared storage called \emph{Amazon
-Simple Storage Service}(Amazon S3), however compared to the throughput of shared storage system in
-high performance computing system, Amazon S3 can only achieve a extremely low throughput,
+Simple Storage Service}(Amazon S3)\cite{AMAZON_AWS}, however compared to the throughput of shared
+storage system in high performance computing system, Amazon S3 can only achieve a extremely low throughput,
 as well as has a high latency, since storage machine in Amazon S3 are geographically distributed and connected via Internet.
 Also it is difficult to build each compute center a reasonable size data center, since it can not
 achieve a high utilization of storage system.
