--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -3,6 +3,7 @@
 \usepackage{supertabular}
 \usepackage{graphicx}
 \usepackage{flushend}
+\usepackage{cite}
 \bibliographystyle{IEEEtran}
 
 \begin{document}
