--- a/paper/src/related_work.tex
+++ b/paper/src/related_work.tex
@@ -1,4 +1,3 @@
-%to do 
 \section{related work}
 \label{sec:related work}
 
@@ -9,8 +8,8 @@ performance(HPC) system to absorb bursty I/O request from applications, they ana
 pattern of several applications, and the workload of the whole system, and propose a SSD based burst
 buffer system to absorb such bursty I/O request instead of traditional approach which increase the
 throughput of the file system and easily cause the under utilization.
-Sato el at.\cite{checkpointing} proposed a burst buffer based checkpoint strategy to enable timely
-checkpoint as well as alleviate the affect to applications.
+Kento Sato el at.\cite{checkpointing} proposed a burst buffer based checkpoint strategy to enable
+timely checkpoint as well as alleviate the affect to applications.
 
 The emergence of Cloud Computing technology bring a new solution to large scale computation for it's
 economies of scale, low capital costs, high accessibility and flexibility.
@@ -39,6 +38,6 @@ performance by compress the I/O data.
 Hongtao Du el at.\cite{DHFS:_A_High-Throughput_Heterogeneous_File_System_Based_on_Mainframe_for_Cloud_Storage}
 focused on the performance of metadata server in cloud environment and propose a high throughput
 system for Cloud Storage, by building metadata server on the high performance mainframe.
-They also focused on the security part of the shared stroage in cloud, and propose a
+They also focused on the security part of the shared storage in cloud, and propose a
 high-throughput parallel file for secure Cloud Storage base on a new concurrent write
 mechanism\cite{PsFS:_A_high-throughput_parallel_file_system_for_secure_Cloud_Storage_system}.
