--- a/paper/src/conclusion.tex
+++ b/paper/src/conclusion.tex
@@ -1,9 +1,16 @@
 %to do
-\section{conclusion}
+\section{conclusion and future work}
 \label{sec:conclusion}
 In this paper, we propose a cloud based burst buffer system to burst the I/O throughput in cloud.
 We implement a prototype of our proposal system, and evaluate it on Amazon EC2/S3 public cloud.
 We also simulate three data intensive applications on our proposal system.
-We achieve a up to a up to 8 times speed up for a single user in reading, as well as 14 times speed
+We achieve an up to 8 times speed up for a single user in reading, as well as 14 times speed
 up for the whole system in writing.
 
+However since this is a prototype of our proposal system, there are still many limitation in the
+system, may leading to under utilization of node bandwidth, and master node may easily become the
+bottleneck of the whole system.
+Also there are many points can be improved and can be added to the implementation, including the
+data layout of the I/O node in order to make load balance, and dynamic load balance in node addition
+and deletion.
+For the future work, we will try to improve our prototype.
