--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -4,6 +4,9 @@
 \usepackage{graphicx}
 \usepackage{flushend}
 \usepackage{cite}
+\usepackage{subfigure}
+\usepackage[cmex10]{amsmath}
+
 \bibliographystyle{IEEEtran}
 
 \begin{document}
@@ -20,20 +23,20 @@ Cloud}
 		Tokyo Institute of Technology\\
 		2-12-1-W8-33, Ohokayama,\\
 		Meguro-ku, Tokyo 152-8552 Japan\\
-	belldandyxtq@gmail.com}
+	Email: belldandyxtq@gmail.com}
 	\and
 	\IEEEauthorblockN{Kento Sato}
-	\IEEEauthorblockA{?\
+	\IEEEauthorblockA{?\\
 		Lawrence Livermore National Laboratory\\
 		Livermore, CA 94551 USA\\
-	?}
+	Email: ?}
 	\and
 	\IEEEauthorblockN{Satoshi Matsuoka}
 	\IEEEauthorblockA{Global Scientific Information and Computing Center\\
 		Tokyo Institute of Technology\\
 		2-12-1-W8-33, Ohokayama,\\
 		Meguro-ku, Tokyo 152-8552 Japan\\
-	matsu@is.titech.ac.jp}
+	Email: matsu@is.titech.ac.jp}
 }
 
 \maketitle
