--- a/paper/src/conclusion.tex
+++ b/paper/src/conclusion.tex
@@ -3,9 +3,10 @@
 \label{sec:conclusion}
 In this paper, we propose a cloud based burst buffer system to burst the I/O throughput in cloud.
 We implement a prototype of our proposal system, and evaluate it on Amazon EC2/S3 public cloud.
-We also simulate three data intensive applications on our proposal system.
 We achieve an up to 8 times speed up for a single user in reading, as well as 14 times speed
 up for the whole system in writing.
+We also simulate three data intensive applications on our proposal system, and achieved up to 4
+times speed up on the execution time.
 
 However since this is a prototype of our proposal system, there are still many limitation in the
 system, may leading to under utilization of node bandwidth, and master node may easily become the
