--- a/paper/src/evaluation.tex
+++ b/paper/src/evaluation.tex
@@ -126,7 +126,7 @@ First we make several assumptions:
 \begin{itemize}
   \item All I/O data are evenly distributed over all I/O nodes.
   \item Applications access all data evenly.
-  \item I/O nodes and compute nodes have the same bandwidth T.
+  \item I/O nodes and compute nodes have the same bandwidth $T$.
   \item Multiple compute nodes can shared the throughput of I/O nodes equally.
 \end{itemize}
 
