--- a/paper/src/introduction.tex
+++ b/paper/src/introduction.tex
@@ -42,7 +42,8 @@ Our proposal system not only target on the work flow applications, all the appli
 I/O data locality or even output a huge size can get speed up on our proposal system.
 We implemented a prototype of our proposal system and evaluated on real public cloud environment, as
 well as simulated with several applications.
-We achieved 8 times speed up on reading as well as 14 times speed up on writing with 8 I/O nodes.
+We achieved 8 times speed up on reading as well as 7 times speed up on writing with 8 I/O nodes, and
+achieved a up to 4 times speed up on execution of data intensive applications from simulation.
 
 Our contributions can be summarized as following:
 \begin{itemize}
